[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Images/Icons Images/planet icon.png" type="Texture" id=1]
[ext_resource path="res://Resources/Images/Icons Images/shipicon.png" type="Texture" id=2]
[ext_resource path="res://Resources/Images/Icons Images/stars icon.png" type="Texture" id=3]
[ext_resource path="res://Resources/Styles/DefaultTheme.tres" type="Theme" id=4]
[ext_resource path="res://TravelingController.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 80 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpaceshipBtn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -22, -15 ), Vector2( -22, -15 ), Vector2( -74, -15 ), Vector2( -70, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlanetsBtn:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -22, -15 ), Vector2( -22, -15 ), Vector2( 29, -15 ), Vector2( 26, -15 ) ]
}

[node name="Position2D" type="Position2D"]
position = Vector2( 90, 262 )
__meta__ = {
"_edit_vertical_guides_": [ 90.0 ]
}

[node name="TravelingController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
margin_bottom = 80.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceshipBtn" type="Button" parent="TravelingController"]
margin_left = -22.0
margin_top = -15.0
margin_right = 22.0
margin_bottom = 17.0
rect_min_size = Vector2( 28, 22 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TravelingController/SpaceshipBtn"]
margin_left = 2.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 30.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetsBtn" type="Button" parent="TravelingController"]
margin_left = -22.0
margin_top = -15.0
margin_right = 22.0
margin_bottom = 17.0
rect_min_size = Vector2( 28, 22 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TravelingController/PlanetsBtn"]
margin_left = 9.0
margin_top = 3.0
margin_right = 35.0
margin_bottom = 29.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsBtn" type="Button" parent="TravelingController"]
margin_left = -23.0
margin_top = -15.0
margin_right = 23.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TravelingController/StarsBtn"]
margin_left = 2.0
margin_top = 2.0
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TravelingController"]
autoplay = "appear"
anims/appear = SubResource( 1 )
[connection signal="pressed" from="TravelingController/SpaceshipBtn" to="TravelingController" method="_on_SpaceshipBtn_pressed"]
[connection signal="pressed" from="TravelingController/PlanetsBtn" to="TravelingController" method="_on_PlanetsBtn_pressed"]
[connection signal="pressed" from="TravelingController/StarsBtn" to="TravelingController" method="_on_StarsBtn_pressed"]
